<resources>
    <string name="app_name">Dusigrosz</string>
    <string name="mainScreenTopMessage">Witaj, o to twoi dłużnicy</string>
    <string name="createNewDebtor">Utwórz nowego dłużnika</string>
    <string name="totalDebtDefaultText">Total debt</string>
    <string name="forgiveDebtDialogTitle">Czy na pewno chcesz wybaczyć dług?</string>
    <string name="yesMessage">Tak</string>
    <string name="noMessage">Nie</string>
    <string name="modifyDebtorTopLabel">Wprowadź dane o dłużniku</string>
    <string name="debtorDefaultNameText">Nazwa dłużnika</string>
    <string name="debtAmountField">Dług</string>
    <string name="acceptDebtorText">Zaakceptuj</string>
    <string name="rejectDebtorButton">Porzuć</string>
    <string name="requiredFieldErrorText">Pole wymagane</string>
    <string name="debtCannotBeNegativeErrorText">Dług musi być dodatni</string>
    <string name="rejectDebtorChangesDialogTitle">Czy na pewno chcesz porzucić zmiany?</string>
    <string name="rejectDebtorChangesDialogMessage">Wprowadzone zmiany znikną bezpowrotnie</string>
    <string name="simulateDebtPaymentButtonText">Symuluj spłatę długu</string>
    <string name="startSimulationButtonText">Rozpocznij symulację</string>
    <string name="stopSimulationButtonText">Zatrzymaj symulację</string>
    <string name="provisionLabelText">% prowizji</string>
    <string name="debtPaymentSpeedLabelText">Prędkość spłaty w PLN/SEC</string>
    <string name="requiredRatesLabelText">Wymagana ilość rat aby spłacić dług z odsetkami</string>
    <string name="remainingDebtLabelText">Pozostały dług</string>
    <string name="hasToBeGraterThanZero"><![CDATA[Musi być > 0]]></string>
</resources>
