<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DebtPaymentSimulationActivity">

    <TextView
        android:id="@+id/debtProvisionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:labelFor="@id/debtProvision"
        android:text="@string/provisionLabelText"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.805"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/debtorDebt" />

    <EditText
        android:id="@+id/debtPaymentSpeed"
        android:layout_width="173dp"
        android:layout_height="66dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="numberSigned"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/debtPaymentSpeedLabel" />

    <TextView
        android:id="@+id/debtorName"
        android:layout_width="329dp"
        android:layout_height="49dp"
        android:layout_marginTop="28dp"
        android:text="dsadasdasdasdadsdadsasd"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/debtorDebt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="bbbbbbbbbbbbbbbbbbb"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/remainingDebtLabel" />

    <EditText
        android:id="@+id/debtProvision"
        android:layout_width="173dp"
        android:layout_height="66dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="numberSigned"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/debtProvisionLabel" />

    <Button
        android:id="@+id/simulationControllButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:onClick="onSimulationButtonClick"
        android:text="@string/startSimulationButtonText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/requiredNumberOfRatesLabel"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/requiredNumberOfRates"
        android:layout_width="196dp"
        android:layout_height="61dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:text="aaaaaaaaaaaaaaaaaaaa"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/simulationControllButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/requiredNumberOfRatesLabel"
        app:layout_constraintVertical_bias="0.156" />

    <TextView
        android:id="@+id/debtPaymentSpeedLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="44dp"
        android:labelFor="@id/debtPaymentSpeed"
        android:text="@string/debtPaymentSpeedLabelText"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/debtorDebt" />

    <TextView
        android:id="@+id/requiredNumberOfRatesLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="204dp"
        android:labelFor="@id/requiredNumberOfRates"
        android:text="@string/requiredRatesLabelText"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/debtorDebt" />

    <TextView
        android:id="@+id/remainingDebtLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/remainingDebtLabelText"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/debtorName" />
</androidx.constraintlayout.widget.ConstraintLayout>